pgadmin/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgadmin4
  labels:
    app: pgadmin4
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
    - host: "" 
      http:
        paths:
          - path: /pgadmin
            backend:
              serviceName: eshoponweb-svc
              servicePort: 80
